added auto option to dark-mode
